Fix arrow icon firefox issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ h1 {
 .qtn {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+  
     cursor: pointer;
 }
 
@@ -113,9 +113,12 @@ h1 {
 }
 
 .qtn > img {
-    object-fit:scale-down;
-    object-position: 100% 50%;
-    
+    /*object-fit:scale-down;
+    object-position: 100% 50%;*/
+    position: absolute;
+    margin-top: 1.5%;
+    right: 35%;
+
 }
 
 hr {
@@ -211,5 +214,15 @@ span {
         width: 650px;
         z-index: 1;
     }
+
+    .qtn > img {
+        /*object-fit:scale-down;
+        object-position: 100% 50%;*/
+        position: absolute;
+        margin-top: 1%;
+        right: 29%;
+    
+    }
+    
 
 }
